katars/tests/snaps/snapshots/snap_errors__no_such_attr.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"kind P { x: Int }\\nlet p = P { x: 1 }\\np.z\")"
---
Error: 'P' has no field or method 'z'
   ╭─[<test>:3:3]
   │
 3 │ p.z
   │   ┬  
   │   ╰── 'P' has no field or method 'z'
───╯
